<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.Activity17">

    <LinearLayout
        android:id="@+id/ln_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:padding="8dp"
            android:minHeight="100dp"
            >
            <EditText
                android:id="@+id/edit_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/activity9edit"
                android:inputType="textMultiLine"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </LinearLayout>

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_go10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/next_bt"
            android:layout_marginTop="16dp"
            android:text="@string/visualize_your_goal"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_go11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/next_bt"
            android:layout_marginTop="16dp"
            android:text="@string/ideas_to_reach_your_goal"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_bt"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_bt"
            android:text="@string/next"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>