<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.Activity8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ln_bottom"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ln_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_done"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/activy8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/activity8"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ln_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_bt"
            android:text="@string/no"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:background="@drawable/next_bt"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>