<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.nhattuan.growrichs.Fragment.SleepTimeFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.nhattuan.growrichs.ultil.TextviewPlus
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:lines="2"
        android:maxEms="9"
        android:text="@string/go_to_sleep"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:background="?attr/colorButtonNormal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:paddingTop="10dp"
                android:text="@string/ring_tone"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingTop="10dp"
                android:text="@string/default_ringtone"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_volume_up_black_24dp"
                android:tint="@android:color/darker_gray" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:tint="@android:color/holo_blue_light" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:checked="true"
                android:drawableLeft="@drawable/ic_vibration_black_24dp"
                android:drawableTint="@android:color/darker_gray" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:paddingTop="10dp"
                android:text="@string/snooze"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingTop="10dp"
                android:text="@string/off"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
