<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.Activity11">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ln_bottom"
        android:layout_marginBottom="16dp"
        >

        <LinearLayout
            android:id="@+id/ln_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_done"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/activity11"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingBottom="8dp"
                android:textStyle="italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/goal_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <com.nhattuan.growrichs.ultil.ButtonPlus
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/next_bt"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_a_new_idea"
                android:textAllCaps="false"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ln_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_bt"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.nhattuan.growrichs.ultil.ButtonPlus
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_bt"
            android:text="@string/button_ok"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</RelativeLayout>
