<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_title"
                android:text="@string/create_new_idea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/text_content"
                android:text="@string/enter_your_new_idea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_below="@+id/text_title"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_below="@+id/text_content"
                android:background="@drawable/bg_edittext"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/ln_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/edt_content"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.nhattuan.growrichs.ultil.ButtonPlus
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/next_bt"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.nhattuan.growrichs.ultil.ButtonPlus
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/next_bt"
                    android:text="@string/button_ok"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>